fix : z-index 수정

--- a/indentity.css
+++ b/indentity.css
@@ -263,6 +263,7 @@ body {
     left: 0;
     top: 0;
     background: rgba(0, 0, 0, 0.3);
+    z-index: 10;
 }
 
 .id_popup {
@@ -275,7 +276,7 @@ body {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    z-index: 2;
+    z-index: 11;
 }
 
 .id_popup p {
